tests/fixtures/invalid/float_bitand_dict.py
# Cannot bitwise AND Float and Dict[str, int]
x: float = 1.0 & {"a": 1}
